--- a/player.html
+++ b/player.html
@@ -6,7 +6,7 @@
         src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BuffStreams - Live Streams</title>
+    <title>Sportsonehd - 24/7 Live Sports</title>
     <link rel="icon" type="image/png"
         href="https://media.cdnandroid.com/item_images/1414217/imagen-live-sports-plus-hd-0ori.jpg">
 
