--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SportsOneHD – Watch Live Sports in HD Anytime, Anywherets</title>
+    <title>SportsOneHD – Watch Live Sports in HD Anytime, Anywhere</title>
     <link href="./output.css" rel="stylesheet" />
     <link rel="icon" type="image/png"
         href="https://media.cdnandroid.com/item_images/1414217/imagen-live-sports-plus-hd-0ori.jpg">
