--- a/watch/index.html
+++ b/watch/index.html
@@ -11,7 +11,7 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
 <!--468x60-->  
-</div><div style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">⚠️ <strong>Note:</strong> Stream will be live <span style="color:#58a6ff;">15 minutes before theevent starts</span>. Please check back shortly.</div><div class="iframe-container">
+</div><div style="background-color:#2B2B2B; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #3A3A3A; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">⚠️ <strong>Note:</strong> Stream will be live <span style="color:#00acc1;">10 minutes before the event starts</span>. Please check back shortly.</div><div class="iframe-container">
 <iframe id="player-frame" width="100%" height="500" allowfullscreen></iframe></div><div class="ad-center">
 <!--320x50-->  
 <script type="text/javascript">
