--- a/player.html
+++ b/player.html
@@ -1,127 +1,27 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <script type='text/javascript'
         src='//pl18541007.profitableratecpm.com/91/94/0f/91940f84fa379733194239a75eb1cbd0.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sportsonehd - Streams</title>
+    <title>Sportsonehd - Streams 24/7</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background-color: oklch(0.145 0 0);
-            color: #e7ffe7;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            padding: 30px 15px;
-        }
-
-        .content-box {
-            background: oklch(0.205 0 0);
-            border-radius: 12px;
-            max-width: 1200px;
-            width: 100%;
-            display: flex;
-            padding: 20px;
-            border: 1px solid #222;
-            gap: 20px;
-        }
-
-        .main-content {
-            flex: 0 0 70%;
-        }
-
-        .ad-center {
-            display: flex;
-            justify-content: center;
-            margin: 10px 0;
-        }
-
-        .iframe-container {
-            position: relative;
-            width: 100%;
-            padding-top: 56.25%;
-            border-radius: 10px;
-            overflow: hidden;
-            margin: 15px 0;
-        }
-
-        .post-icons {
-            display: none;
-        }
-
-        .iframe-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-            border-radius: 10px;
-        }
-
-        .sidebar {
-            flex: 0 0 30%;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .sidebar .ad {
-            width: 100%;
-            overflow: hidden;
-        }
-
-        @media (max-width:768px) {
-            .container {
-                flex-direction: column;
-                padding: 10px;
-            }
-
-            .content-box {
-                flex-direction: column;
-                padding: 10px;
-                align-items: center;
-            }
-
-            .main-content,
-            .sidebar {
-                width: 100%;
-            }
-
-            .sidebar {
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-                margin-top: 20px;
-            }
-
-            .sidebar .ad {
-                width: 100%;
-                max-width: 100%;
-            }
-
-            .ad-center {
-                justify-content: center;
-                margin: 10px 0;
-            }
-
-            .iframe-container {
-                width: 100%;
-                padding-top: 56.25%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
+    <div class="discord-wrapper">
+        <div class="discord-container">
+            <div class="discord-heading">
+                <h1>Stay in the Game!</h1>
+                <p>Join our Discord for live match alerts & daily sports insights.</p>
+            </div>
+            <a href="https://discord.com/invite/TrWA6eRahz" target="_blank" class="discord-logo-box">
+                <img src="https://www.logo.wine/a/logo/Discord_(software)/Discord_(software)-Logo.wine.svg"
+                    alt="Join Discord" />
+            </a>
+        </div>
+    </div>
     <div class="container">
         <div class="content-box">
             <section class="main-content">
