--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
             </div>
             <a href="https://discord.com/invite/TrWA6eRahz" target="_blank" class="discord-logo-box">
                 <img src="https://www.logo.wine/a/logo/Discord_(software)/Discord_(software)-Logo.wine.svg"
-                    alt="Join Discord" />
-                <span>Join Discord Now</span>
-            </a>
+                    alt="Join Discord" />            </a>
         </div>
     </div>
     <div class="container">
