--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -60,7 +59,7 @@
                     onkeyup="searchMatches()">
                 <div id="matches">
                     <!--MATCHES-->
-         <div class="match-link" data-league="BOXING" data-frame="https://embedsports.me/boxing/oleksandr-usyk-vs-daniel-dubois-2-stream-1">
+         <div class="match-link" data-league="BOXING" data-frame="https://buffstreamshd.icu/channal/Oleksandr-Usyk--vs--Daniel-Dubois/">
     <div class="match-card">
         <div class="match-league">
             BOXING
