--- a/index.html
+++ b/index.html
@@ -42,17 +42,16 @@
             <section class="main-content">
                 <div class="ad-top">
                     <!--728x90-->
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '3f8143f325666e9470bcb5af38573dd5',
-                            'format': 'iframe',
-                            'height': 90,
-                            'width': 728,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/3f8143f325666e9470bcb5af38573dd5/invoke.js"></script>
+                  <script type="text/javascript">
+	atOptions = {
+		'key' : 'c20f10954c08f6a27a338dec0a893fa1',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c20f10954c08f6a27a338dec0a893fa1/invoke.js"></script>
                     <!--728x90-->
                 </div>
                 <input type="text" class="search" id="searchBox" placeholder="Search team & League ..."
@@ -804,32 +803,30 @@ San Diego FC vs Vancouver Whitecaps
             <div class="sidebar">
                 <div class="mobile-ad">
                     <!--160x300-->
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': 'b145f0a8ad4e19e103be39d5a7fa45be',
-                            'format': 'iframe',
-                            'height': 300,
-                            'width': 160,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '6f9d413a17f9faceb3acbce2d94a743d',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6f9d413a17f9faceb3acbce2d94a743d/invoke.js"></script>
                     <!--160x300-->
                 </div>
                 <div class="mobile-ad ad-600">
                     <!--160x600-->
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '475ea948a2b7dee94beb0656c6a6066b',
-                            'format': 'iframe',
-                            'height': 600,
-                            'width': 160,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/475ea948a2b7dee94beb0656c6a6066b/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '0ebcd43bfbdcba316bf97e7df886f9cb',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0ebcd43bfbdcba316bf97e7df886f9cb/invoke.js"></script>
                     <!--160x600-->
                 </div>
             </div>
