--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Top Rank Boxing | Oleksandr Usyk vs Daniel Dubois 2
     </div>
 </div>
 
-<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
+<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/RMCSport1[France]">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -83,7 +83,7 @@ UFC 318 EARLY PRELIMS | Adam Fugitt vs Islam Dulatov
 </div>
 
 
-<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
+<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/RMCSport1[France]">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -95,7 +95,7 @@ UFC 318 Preliminary | Kyler Phillips vs Vinicius Oliveira
     </div>
 </div>
 
-<div class="match-link" data-league="MMA" data-frame="https://buffstreamshd.icu/channal/Max-Holloway--vs--Dustin-Poirier/">
+<div class="match-link" data-league="MMA" data-frame="https://topembed.pw/channel/RMCSport1[France]">
     <div class="match-card">
         <div class="match-league">
             UFC
@@ -108,7 +108,7 @@ UFC 318 MAIN CARD | Max Holloway - Dustin Poirier
 </div>
 
 
-<div class="match-link" data-league="BOXING" data-frame="https://buffstreamshd.icu/channal/Manny-Pacquiao--vs--Mario-Barrios/">
+<div class="match-link" data-league="BOXING" data-frame="https://topembed.pw/channel/CosmoteSport9[Greece]">
     <div class="match-card">
         <div class="match-league">
             BOXING
