--- a/player.html
+++ b/player.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <script type='text/javascript' src='//pl18979059.profitableratecpm.com/96/88/cb/9688cbe553144eccf9f8893dc99de346.js'></script>
+<script type='text/javascript' src='//encouragingbrightest.com/0f/04/8b/0f048b9de78a46cd83c6f8e537d37bbc.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sportsonehd - Streams 24/7</title>
+    <title>| Soccer</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="discord-wrapper">
-        <div class="discord-container">
-            <div class="discord-heading">
-                <h1>Stay in the Game!</h1>
-                <p>Join our Discord for live match alerts & daily sports insights.</p>
-            </div>
-            <a href="https://discord.com/invite/TrWA6eRahz" target="_blank" class="discord-logo-box">
-                <img src="https://www.logo.wine/a/logo/Discord_(software)/Discord_(software)-Logo.wine.svg"
-                    alt="Join Discord" />
-            </a>
-        </div>
+  <header class="site-header">
+    <div class="header-container">
+      <a href="/" style="text-decoration: none; color: inherit;">
+        <div class="site-name">⚽Sportsonehd.site</div>
+      </a>
     </div>
-    <div class="container">
-        <div class="content-box">
-            <section class="main-content">
-                <div class="ad-center">
-                   <script type="text/javascript">
+  </header>
+        </div>
+        <div class="container">
+            <div class="content-box">
+                <section class="main-content">
+                    <div class="ad-center">
+                    <script type="text/javascript">
 	atOptions = {
 		'key' : 'a33899126408056290e02b655b9fc12d',
 		'format' : 'iframe',
@@ -35,14 +31,12 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/a33899126408056290e02b655b9fc12d/invoke.js"></script>
-                </div>
-
-                <div class="iframe-container">
-                    <iframe allow="encrypted-media" width="640" height="360" scrolling="no" id="frame-player"
-                        frameborder="0" allowfullscreen src=""></iframe>
-                </div>
-                <div class="ad-center">
-                   <script type="text/javascript">
+                    </div>
+                    <div class="iframe-container">
+                           <iframe id="frame-player" allowfullscreen></iframe>
+                    </div>
+                    <div class="ad-center">
+                     <script type="text/javascript">
 	atOptions = {
 		'key' : '19f7677da84c1912f89f478a0e3579f5',
 		'format' : 'iframe',
@@ -52,12 +46,11 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/19f7677da84c1912f89f478a0e3579f5/invoke.js"></script>
-                </div>
-            </section>
-
-            <aside class="sidebar">
-                <div class="ad">
-                   <script type="text/javascript">
+                    </div>
+                </section>
+                <aside class="sidebar">
+                    <div class="ad">
+                     <script type="text/javascript">
 	atOptions = {
 		'key' : '91a56bd712bd2940ff3a1edfaf3b00cb',
 		'format' : 'iframe',
@@ -67,10 +60,9 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/91a56bd712bd2940ff3a1edfaf3b00cb/invoke.js"></script>
-                </div>
-
-                <div class="ad">
-                  <script type="text/javascript">
+                    </div>
+                    <div class="ad">
+                    <script type="text/javascript">
 	atOptions = {
 		'key' : '6f9d413a17f9faceb3acbce2d94a743d',
 		'format' : 'iframe',
@@ -80,27 +72,39 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/6f9d413a17f9faceb3acbce2d94a743d/invoke.js"></script>
-                </div>
-            </aside>
+                    </div>
+                </aside>
+            </div>
         </div>
-    </div>
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const myParam = urlParams.get("frame");
+        <script>
+  function decode(str) {
+    try {
+      return decodeURIComponent(escape(atob(str)));
+    } catch (e) {
+      return "";
+    }
+  }
+  const urlParams = new URLSearchParams(window.location.search);
+  const encoded = urlParams.get("code");
+  const iframe = document.getElementById("frame-player");
 
-        let dPlayer = document.querySelector("#frame-player");
+  // Get team and league names from URL params
+  const team1 = urlParams.get("team1") || "Team 1";
+  const team2 = urlParams.get("team2") || "Team 2";
+  const league = urlParams.get("league") || "League";
 
-        dPlayer.src = myParam;
-    </script>
-    <script type="text/javascript">var _Hasync = _Hasync || [];
-        _Hasync.push(['Histats.start', '1,4961593,4,0,0,0,00010000']);
-        _Hasync.push(['Histats.fasi', '1']);
-        _Hasync.push(['Histats.track_hits', '']);
-        (function () {
-            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-            hs.src = ('//s10.histats.com/js15_as.js');
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-        })();</script>
-    <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4961593&101" alt="counter easy hit"
-                border="0"></a></noscript>
+  // Set the page title dynamically based on match info
+  document.title = `${team1} vs ${team2} | ${league} | Live Stream`;
+
+  if (encoded) {
+    const decodedLink = decode(encoded);
+    if (decodedLink.startsWith("http")) {
+      iframe.src = decodedLink;
+    } else {
+      document.body.innerHTML = "<h2 style='color:white;text-align:center;margin-top:20%'>Invalid or Missing Stream Link</h2>";
+    }
+  } else {
+    document.body.innerHTML = "<h2 style='color:white;text-align:center;margin-top:20%'>No stream code provided.</h2>";
+  }
+</script>
 </body></html>
