--- a/player.html
+++ b/player.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script type='text/javascript' src='//encouragingbrightest.com/0f/04/8b/0f048b9de78a46cd83c6f8e537d37bbc.js'></script>
-    <meta charset="UTF-8" />
+<script type='text/javascript' src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
+	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>| Soccer</title>
     <link rel="stylesheet" href="./style.css">
@@ -21,57 +21,57 @@
             <div class="content-box">
                 <section class="main-content">
                     <div class="ad-center">
-                    <script type="text/javascript">
+                   <script type="text/javascript">
 	atOptions = {
-		'key' : 'a33899126408056290e02b655b9fc12d',
+		'key' : '1affd0df5f0aa4ec9c4aac51d7b2276b',
 		'format' : 'iframe',
 		'height' : 60,
 		'width' : 468,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/a33899126408056290e02b655b9fc12d/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
                     </div>
                     <div class="iframe-container">
                            <iframe id="frame-player" allowfullscreen></iframe>
                     </div>
                     <div class="ad-center">
-                     <script type="text/javascript">
+                   <script type="text/javascript">
 	atOptions = {
-		'key' : '19f7677da84c1912f89f478a0e3579f5',
+		'key' : '6c8b2e342bc3150b1316c166262197fd',
 		'format' : 'iframe',
 		'height' : 50,
 		'width' : 320,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/19f7677da84c1912f89f478a0e3579f5/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
                     </div>
                 </section>
                 <aside class="sidebar">
                     <div class="ad">
-                     <script type="text/javascript">
+                   <script type="text/javascript">
 	atOptions = {
-		'key' : '91a56bd712bd2940ff3a1edfaf3b00cb',
+		'key' : '6367168a6dcbc9d005a65a2770432a28',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/91a56bd712bd2940ff3a1edfaf3b00cb/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
                     </div>
                     <div class="ad">
-                    <script type="text/javascript">
+                  <script type="text/javascript">
 	atOptions = {
-		'key' : '6f9d413a17f9faceb3acbce2d94a743d',
+		'key' : 'c056290ae6472fcc026e9aa3e4433ff2',
 		'format' : 'iframe',
 		'height' : 300,
 		'width' : 160,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/6f9d413a17f9faceb3acbce2d94a743d/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
                     </div>
                 </aside>
             </div>
