--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="site-name">SportsOnehd</div>
   </header>
 
- <a href="https://discord.com/invite/nbyQnTqN" target="_blank" class="discord-link">
+ <a href="https://discord.gg/drGfsqfb" target="_blank" class="discord-link">
       <img src="https://support.discord.com/hc/user_images/PRywUXcqg0v5DD6s7C3LyQ.jpeg" alt="Discord Logo" />
       <span>Join Our Discord</span>
     </a>
